# mind-daw

./: .gitignore  Cargo.toml  README.md  flake.nix  soundboard.html  test-bt-connect.sh
.cargo/: config.toml
data/: words.txt
profiles/sofia/: baseline.json
profiles/sofia2/: baseline.json
scripts/: cog_connect.m  compute_baseline.py  generate_word_vectors.py  neural_synth.scd  session_to_fif.py  test_cog_connect.sh
src/: audio.rs  calibration.rs  cognionics.rs  control.rs  main.rs  session_log.rs  soundboard.rs  streams.rs  tonnetz.rs  word_read.rs
src/instrument/: mapping.rs  mod.rs  mode.rs  osc.rs  sc_process.rs  signals.rs
src/recorder/: auto_detect.rs  baseline.rs  classifier.rs  epoch.rs  features.rs  mod.rs  storage.rs
