[package]
name = "mind-daw"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
lsl = "0.1"
anyhow = "1"
smol = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bluer = { version = "0.17", features = ["bluetoothd", "rfcomm"] }
tokio = { version = "1", features = ["rt", "io-util", "macros", "sync"] }
futures = "0.3"
rustfft = "6"
cpal = "0.15"
rtrb = "0.3"
