[package]
name = "mind-daw"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { version = "0.2", features = ["runtime_shaders"] }
gpui-component = "0.5"
lsl = "0.1"
anyhow = "1"
smol = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustfft = "6"
rosc = "0.9"
cpal = "0.15"
rtrb = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", features = ["bluetoothd", "rfcomm"] }
tokio = { version = "1", features = ["rt", "io-util", "macros", "sync", "time"] }
futures = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
serialport = "4"

[patch.crates-io]
lsl-sys = { path = "vendor/lsl-sys" }
